--- a/.luarc.json
+++ b/.luarc.json
@@ -246,7 +246,8 @@
         "dssmod",
         "Ephiphany",
         "Epiphany",
-        "StageAPI"
+        "StageAPI",
+        "TheFuture"
 	],
     "diagnostics.disable": [
     ]}
